--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="covwe-inn">
                     <div class="row no-margin">
                         <div class="col-md-3 img-c">
-                            <img src="assets/images/profile.jpg" alt="">
+                            <img src="assets/images/profile1.jpg" alt="">
                         </div>
                         <div class="col-md-9 tit-det">
                             <h2>Rahmad Alhidayat Tuloh / Programmer</h2>
@@ -283,15 +283,6 @@ Merupakan seseorang yang mengembangkan sebuah aplikasi atau sistem pada komputer
                                           </div>
                                           <div class="col-sm-4">
                                               <img src="assets/images/gallery/gallery_06.jpg" alt="">
-                                          </div>
-                                           <div class="col-sm-4">
-                                              <img src="assets/images/gallery/gallery_10.jpg" alt="">
-                                          </div>
-                                           <div class="col-sm-4">
-                                              <img src="assets/images/gallery/gallery_08.jpg" alt="">
-                                          </div>
-                                           <div class="col-sm-4">
-                                              <img src="assets/images/gallery/gallery_09.jpg" alt="">
                                           </div>
                                           
                                       </div>
