--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="covwe-inn">
                     <div class="row no-margin">
                         <div class="col-md-3 img-c">
-                            <img src="assets/images/profile1.jpg" alt="">
+                            <img src="assets/images/rahmad.jpg" alt="">
                         </div>
                         <div class="col-md-9 tit-det">
                             <h2>Rahmad Alhidayat Tuloh / Programmer</h2>
